# gatecheck-oss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: codeql.yml  scorecard.yml  test.yml
docs/: OSS_RELEASE_AUDIT.md  ROADMAP.md
tests/: test_health.py  test_launch_pack.py  test_mcp.py  test_readiness.py  test_scanner.py  test_security_regressions.py  test_x402_payment.py
x402_resource_scanner/: __init__.py  __main__.py  analytics.py  health.py  launch_pack.py  mcp.py  readiness.py  receipt.py  scanner.py  x402_payment.py
