[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gatecheck"
version = "0.1.0"
description = "Read-only x402 and MCP readiness checks for agent-tool sellers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LarryBuildsAI" }]
keywords = ["x402", "mcp", "agents", "payments", "security", "readiness"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
gatecheck = "x402_resource_scanner.__main__:main"

[project.urls]
Homepage = "https://proofbeforepay.vercel.app/gatecheck"
Repository = "https://github.com/LarryLemonBot/gatecheck-oss"
Issues = "https://github.com/LarryLemonBot/gatecheck-oss/issues"

[tool.setuptools]
packages = ["x402_resource_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
